Update VSCode settings for spell check language and folder associations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
+	"cSpell.language": "en-GB",
 	"cSpell.words": [
 		"Expando",
 		"LINQ",
 		"Newtonsoft",
 		"Scriban",
 		"scribanter"
-	]
+	],
+	"material-icon-theme.folders.associations": {
+		"External": "Middleware",
+	}
 }
