Restructure to split CLI and core library

--- a/Src/Scribanter.Test/Directory.build.props
+++ b/Src/Scribanter.Test/Directory.build.props
@@ -1,7 +1,7 @@
 <Project>
 	<!-- Set build output location -->
 	<PropertyGroup>
-		<BaseOutputPath>..\..\Build\</BaseOutputPath>
+		<BaseOutputPath>..\..\Build\Scribanter.Test\</BaseOutputPath>
 		<BaseIntermediateOutputPath>..\..\Build\Temp\Scribanter.Tests\Obj\</BaseIntermediateOutputPath>
 		<RestorePackagesPath>..\..\Build\Temp\Scribanter.Tests\NuGet</RestorePackagesPath>
 	</PropertyGroup>
