--- a/Src/Scribanter.Core/Scribanter.Core.csproj
+++ b/Src/Scribanter.Core/Scribanter.Core.csproj
@@ -1,18 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<OutputType>Exe</OutputType>
+		<OutputType>Library</OutputType>
 		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="..\External\Clap\Clap.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Scribanter.Core\Scribanter.Core.csproj" />
+		<PackageReference Include="JsonSchema.Net" Version="7.3.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Scriban" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
