--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+        with:
+          submodules: 'recursive' # This will checkout all submodules
 
       - name: Set up .NET
         uses: actions/setup-dotnet@v3
