Fix test command in GitHub workflow to specify solution file

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build Src/Scribanter.sln --no-restore
 
       - name: Run tests
-        run: dotnet test --logger "trx;LogFileName=TestResults.trx"
+        run: dotnet test Src/Scribanter.sln --logger "trx;LogFileName=TestResults.trx"
         
       - name: Publish test results
         uses: actions/upload-artifact@v4
