--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,4 +29,4 @@ jobs:
         run: dotnet build Src/Scribanter.sln --no-restore
 
       - name: Run tests
-        run: dotnet test Src/Scribanter.sln --logger \"console;verbosity=detailed\""
+        run: dotnet test Src/Scribanter.sln --logger \"console;verbosity=detailed\"
