--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build Src/Scribanter.sln --no-restore
 
       - name: Run tests
-        run: dotnet test --logger "console;verbosity=detailed" --logger "trx;LogFileName=TestResults.trx" --blame
+        run: dotnet test Src/Scribanter.sln --logger "console;verbosity=detailed" --logger "trx;LogFileName=TestResults.trx" --blame
         
       - name: Publish Test Results
         uses: dorny/test-reporter@v1
