--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,6 +36,6 @@ jobs:
         if: always()
         with:
           name: Test Results
-          path: 'Src/Scribanter.Test/TestResults/TestResults.trx'
+          path: '**/TestResults.trx'
           reporter: dotnet-trx
           fail-on-error: true
