Add permissions for checks and actions in GitHub Actions workflow

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,6 +11,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      contents: read
+      actions: read
     steps:
       - name: Check out code
         uses: actions/checkout@v3
