--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,12 +1,11 @@
-name: Run Tests
+name: Unit Tests
 
+# NOTE: Only run on successful builds
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Build"]
+    types:
+        - completed
 
 jobs:
   build:
