Update project files to include versioning, metadata, and new publish task; modify .gitignore and VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
 		"xunit"
 	],
 	"material-icon-theme.folders.associations": {
+		// See: https://raw.githubusercontent.com/material-extensions/vscode-material-icon-theme/main/images/folderIcons.png
+		"Publish": "Favicon",
 		"External": "Middleware",
 		"Scribanter": "Robot",
 		"Scribanter.Test": "Test"
