--- a/Src/Scribanter.Core/Scribanter.Core.csproj
+++ b/Src/Scribanter.Core/Scribanter.Core.csproj
@@ -5,6 +5,16 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+
+		<!-- Project versioning -->
+		<Version>1.0.0</Version>
+		<PackageVersion>1.0.0</PackageVersion>
+
+		<!-- Metadata for the project -->
+		<Company>Thomas Sampson</Company>
+		<Authors>Thomas Sampson</Authors>
+		<Description>Scribanter simplifies static content generation by providing a command-line wrapper around Scriban. Generate content from JSON models and Scriban templates without complex setup or coding. Ideal for HTML, config files, and more.</Description>
+		<RepositoryUrl>https://github.com/tmsampson/Scribanter</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,5 +22,7 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Scriban" Version="6.0.0" />
 	</ItemGroup>
+
+	
 
 </Project>
