Update publish workflow to restore dependencies from specific project path

--- a/.github/workflows/publish-tool.yml
+++ b/.github/workflows/publish-tool.yml
@@ -27,7 +27,7 @@ jobs:
           --store-password-in-clear-text
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Src/Scribanter/Scribanter.csproj
 
     - name: Build
       run: dotnet build Src/Scribanter/Scribanter.csproj --configuration Release --no-restore
