--- a/Src/Scribanter.Core/Scribanter.Core.csproj
+++ b/Src/Scribanter.Core/Scribanter.Core.csproj
@@ -7,8 +7,10 @@
 		<Nullable>enable</Nullable>
 
 		<!-- Project versioning -->
-		<Version>0.1.0</Version>
-		<PackageVersion>0.1.0</PackageVersion>
+		<Version>0.1.1</Version>
+
+		<!-- NuGet tool packaging -->
+		<PackageVersion>0.1.1</PackageVersion>
 
 		<!-- Metadata for the project -->
 		<Company>Thomas Sampson</Company>
